# ros2_practica_ws

./: Practica_Geneticos_Original.ipynb  codigoGeneticosOriginal.py  codigoGeneticosRos.py
install/: local_setup.sh  setup.sh
install/genetic_algorithm_pkg/lib/genetic_algorithm_pkg/: genetic
install/genetic_algorithm_pkg/share/genetic_algorithm_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/lanzador_cliente_servidor_pkg/share/lanzador_cliente_servidor_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/msgs_control/share/msgs_control/: package.sh  package.xml
install/my_genetic_pkg/lib/my_genetic_pkg/: genetic
launch/: servidorSim_clienteGenetic_launch.py
log/: latest_build
src/genetic_algorithm_pkg/: setup.cfg  setup.py
src/genetic_algorithm_pkg/genetic_algorithm_pkg/: genetic_algorithm_node _1on.py  genetic_algorithm_node.py
src/genetic_algorithm_pkg/launch/: genetic_algorithm_client.launch.py  genetic_algorithm_client_p100_g500_m018_c033.launch.py
src/lanzador_cliente_servidor_pkg/: setup.cfg  setup.py
src/lanzador_cliente_servidor_pkg/launch/: lanzador_cliente_servidor.launch.py
src/my_genetic_pkg/: setup.cfg  setup.py
src/my_genetic_pkg/launch/: genetic_client.launch.py
src/my_genetic_pkg/my_genetic_pkg/: my_genetic_node.py
src/my_messages_control/: CMakeLists.txt  package.xml
src/my_sim_pkg/: package.xml  setup.py
src/paquete_lanzador/: package.xml  setup.cfg  setup.py
src/sim_pkg/: setup.cfg
src/sim_pkg/sim_pkg/: sim_node.py
(+50 files in other folders)
