<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>genetic_algorithm_pkg</name>
  <version>0.0.0</version>
  <description>Cliente de servicio de índices de rendimiento</description>
  <maintainer email="imardiego@gmail.com">miguel angel rubio</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>msgs_control</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
